<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ab.clipchat.ui.videoclips.VideoClipHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_github_user"
        android:name="com.ab.clipchat.ui.github.GitHubUserFragment"
        android:label="@string/title_github"
        tools:layout="@layout/fragment_github_users" />

    <fragment
        android:id="@+id/navigation_videochat"
        android:name="com.ab.clipchat.ui.videochat.VideoChatFragment"
        android:label="@string/title_videochat"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ab.clipchat.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />



</navigation>