<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".signIn.DeviceRegistrationActivity">

    <TextView
        android:id="@+id/loginMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="15sp"
        android:text="@string/login_to_your_account"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/connectWorld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/blue"
        android:text="@string/connect_people"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginMsg"/>

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_device_registration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/connectWorld"
        app:layout_constraintBottom_toTopOf="@id/login"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAllCaps="false"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:backgroundTint="@color/blue"
        android:text="@string/signin_with_google"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>